test-app-helm/templates/dynamic-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dynamic-app-gke
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dynamic-app-gke
  template:
    metadata:
      labels:
        app: dynamic-app-gke
    spec:
      containers:
      - name: dynamic-app-container
#        image: vaipali/my-first-repo:testapp
        image: vaipali/my-first-repo:testapp_64
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        resources:
        #   limits:
        #     cpu: "2"
        #     memory: 2Gi
          requests:
            cpu: "1"
            memory: 1Gi
        # readinessProbe:
        #   failureThreshold: 3
        #   httpGet:
        #     path: /
        #     port: 8000
        #     scheme: HTTP
        #   periodSeconds: 10
        #   successThreshold: 1
        #   timeoutSeconds: 1
---
apiVersion: v1
kind: Service
metadata:
  name: dynamic-app-gke-svc
#  annotations:
#    cloud.google.com/neg: '{"ingress": true}'
    # cloud.google.com/backend-config: '{"default": "dynamic-app-gke"}'
spec:
  selector:
    app: dynamic-app-gke
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 31000
  type: NodePort
